--- a/components/about-page/about-us.html
+++ b/components/about-page/about-us.html
@@ -1,6 +1,6 @@
 <section class="about-us-section pad-6w">
     <p class="about-subheading">About Us</p>
     <p class="about-us-copy">
-        Lorem ipsum dolor amet tousled ramps air plant lumbersexual shoreditch, pinterest slow-carb scenester mixtape keffiyeh hella authentic. Viral venmo mixtape, snackwave pop-up sustainable humblebrag single-origin coffee enamel pin asymmetrical health goth. Taxidermy squid migas tofu normcore DIY. Vinyl brooklyn celiac copper mug, fashion axe art party edison bulb pickled whatever aesthetic chicharrones. Messenger bag synth heirloom, ugh jianbing wolf flexitarian.
+        Lorem ipsum dolor amet tousled ramps air plant lumbersexual shoreditch, pinterest slow-carb scenester mixtape keffiyeh authentic. Viral venmo mixtape, snackwave pop-up sustainable humblebrag single-origin coffee enamel pin asymmetrical health goth. Taxidermy squid migas tofu normcore DIY. Vinyl brooklyn celiac copper mug, fashion axe art party edison bulb pickled whatever aesthetic chicharrones. Messenger bag synth heirloom, ugh jianbing wolf flexitarian.
     </p>
   </section>
