--- a/components/work-page/card-container.html
+++ b/components/work-page/card-container.html
@@ -12,7 +12,7 @@
     <img class="card-avatar" src='http://fillmurray.com/200/200'>
     <div class="card-text-info">
       <p class="card-name">{{work.form.name}}</p>
-      <p class="card-nickName">{{work.form.nickName}}</p>
+      <p class="card-nickName">A.K.A. "{{work.form.nickName}}"</p>
       <p class="card-email">{{work.form.email}}</p>
       <p class="card-telephone">{{work.form.telephone}}</p>
     </div>
