--- a/style.css
+++ b/style.css
@@ -148,9 +148,14 @@ body {
   line-height: 1.5em;
 }
 
-.cirque {
+.logo-cont {
   width: 33%;
   height: 33%;
+}
+
+.cirque {
+  width: 100%;
+  height: 100%;
 }
 
 /* ========== ABOUT PAGE ========== */
@@ -354,6 +359,11 @@ body {
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
 }
 
+.filters-cont h2 {
+  font-family: 'Barlow', sans-serif;
+  color: #fcbd88
+}
+
 .time-cont {
   padding: 4em 6em;
   width: 100%;
@@ -386,6 +396,26 @@ title text green hsl(157, 87%, 60%); */
   font-size: 1.7em;
   font-family: 'Barlow', sans-serif;
   color: hsl(325, 85%, 64%);
+  width: 40%;
+}
+
+.trunc-cont {
+  padding: 4em 6em;
+  width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.trunc-copy {
+  width: 35%;
+}
+
+.trunc-display {
+  font-size: 1.7em;
+  font-family: 'Barlow', sans-serif;
+  color: hsl(157, 87%, 60%);
   width: 40%;
 }
 
@@ -469,6 +499,19 @@ title text green hsl(157, 87%, 60%); */
 .card-telephone {
   font-size: 1.1em;
   display: inline;
+}
+
+.submit-btn {
+  background: hsl(325, 85%, 64%);
+  border: none;
+  border-radius: 4px;
+  font-size: 1em;
+  color: black;
+  padding: .5em 1em;
+}
+
+.error-message {
+  margin-bottom: .5em;
 }
 
 
