--- a/components/navbar/navbar.html
+++ b/components/navbar/navbar.html
@@ -1,7 +1,7 @@
 <nav>
   <ul class="navbar">
-    <li class="nav-item brand"><a ng-href="/#!/"><img src="imgs/logo.png" alt=""></a></li>
-    <li class="nav-item"><a ng-href="/#!/about">About</a></li>
-    <li class="nav-item"><a ng-href="/#!/work">Work</a></li>
+    <li class="nav-item brand"><a href="/"><img src="imgs/logo.png" alt=""></a></li>
+    <li class="nav-item"><a href="/about">About</a></li>
+    <li class="nav-item"><a href="/work">Work</a></li>
   </ul>
 </nav>
